--- a/_posts/2012-09-07-hello-world.html
+++ b/_posts/2012-09-07-hello-world.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: 你好，世界
+title: 你好，西湖
 ---
 <h2>{{ page.title }}</h2>
-<p>我的第一篇文章</p>
+<p>This is my first article, baby，I love you so much</p>
 <p>{{ page.date | date_to_string }}</p>
