--- a/index.html
+++ b/index.html
@@ -2,10 +2,8 @@
 layout: default
 title: King's Blog
 ---
-<h2>{{ page.title }}</h2>
-<p>最新文章</p>
-<ul>
-　　{% for post in site.posts %}
-　　　　<li>{{ post.date | date_to_string }} <a href="{{ site.baseurl }}{{ post.url }}">  {{ post.title }}</a></li>
-　　{% endfor %}
-</ul>
+##{{ page.title }}
+####最新文章
+{% for post in site.posts %}
+- {{post.date | date_to_string}} [{{page.title}}]({{ site.baseurl }}{{ post.url }})
+{% endfor %}
