--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: King's Blog
     {% for post in site.posts %}
       <div class="hero-unit">
         <p><h2><a href="{{ post.url }}">{{ post.title }}</a></h2>{{ post.date | date_to_string }}</p>
-        <p>{{ post.content | strip_html | truncatewords: 55 }}</p>
+        <p>{{ post.content | strip_html | truncatewords:"2" }}</p>
         <p><a href="{{ post.url }}">Read more ...</a></p>
       </div>
     {% endfor %}
